# devbox

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  integration.yml  release.yml
devbox/: cli.py  core.py  github.py  iterm2.py  onepassword.py  presets.py  registry.py
devbox/providers/: base.py  local.py
docs/architecture/: README.md
src/devbox/: __init__.py  auth.py  bootstrap.py  cli.py  core.py  exceptions.py  github.py  health.py  iterm2.py  macos.py  naming.py  onepassword.py  presets.py  registry.py  ssh.py  sshd.py  sudoers.py  utils.py  zshrc.py
src/devbox/providers/: __init__.py  base.py  local.py
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_cli.py  test_core.py  test_exceptions.py  test_github.py  test_health.py  test_integration.py  test_iterm2.py  test_local_provider.py  test_macos.py  test_naming.py  test_onepassword.py  test_presets.py  test_registry.py  test_ssh.py  test_sshd.py  test_sudoers.py  test_zshrc.py
